name:                lambdacrawler
version:             0.1.0.0
synopsis:            A command-line Web crawler
-- description:         
homepage:            https://github.com/frerich/lambdacrawler
license:             BSD3
license-file:        LICENSE
author:              Frerich Raabe
maintainer:          frerich.raabe@googlemail.com
copyright:           Frerich Raabe 2013
category:            Network
build-type:          Simple
cabal-version:       >=1.8

source-repository head
    type:     git
    location: git://github.com/frerich/lambdacrawler.git

flag threaded
    default: True
    description: Build with support for multithreaded execution

executable lambdacrawler
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Arguments Pipe

  build-depends:       base,
                       bytestring,
                       tagsoup,
                       network,
                       http-types,
                       http-conduit,
                       containers,
                       conduit,
                       case-insensitive,
                       monad-loops,
                       stm,
                       cmdargs

  ghc-options:         -Wall
  if flag(threaded)
        ghc-options:   -threaded
